# agentes-autonomos-tdp

./: Cargo.toml  README.md
azure_vision_client/: Cargo.toml
azure_vision_client/src/: lib.rs  main.rs
camara/: Cargo.toml  conf.json
camara/src/: lib.rs  main.rs
camara/src/camara/: camara.rs  camara_dto.rs  central_de_camaras.rs  conf.json  config.rs  errores.rs  estado_camara.rs  mod.rs  posicion.rs
cliente/: Cargo.toml  logs.txt
cliente/src/: main.rs
cliente/src/cliente/: client.rs  errors.rs  iclient.rs  mod.rs  suscriptor_handler.rs  user.rs
detector_incidentes/: Cargo.toml
detector_incidentes/src/: lib.rs  main.rs
icwt_crypto/: Cargo.toml
icwt_crypto/src/: lib.rs
icwt_crypto/src/icwt_crypto/: crypto.rs  errors.rs  mod.rs
logger/: test_log.txt
logger/src/: lib.rs
sistema_monitoreo/: Cargo.toml  conf.json
sistema_monitoreo/src/: lib.rs  main.rs
sistema_monitoreo/src/sistema_monitoreo/: camara.rs  conf.json  dron.rs  errores.rs  estado.rs  incidente.rs  mod.rs  posicion.rs  sistema_monitoreo.rs
src/commons/: subject.rs
src/servidor/: main.rs
src/servidor/enums/: errores_server.rs  mod.rs
src/servidor/structs/: command_executor.rs  in_memory_repository.rs  mod.rs  oyente_cliente.rs  ping.rs  server.rs  suscription.rs  user.rs  user_permissions.rs  users_repository.rs
ui/centralcam/: Cargo.toml  conf.json  logs.txt
ui/centralcam/src/: main.rs
ui/dronapp/: Cargo.toml  conf.json  logs.txt
ui/sismon/: Cargo.toml  conf.json  logs.txt
ui/sismon/src/: camara.rs  incidencias.rs  login.rs  main.rs  mapa.rs
(+5 files in other folders)
