[package]
name = "sismon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
egui = "0.27.2" 
chrono = "0.4"
walkers = "=0.22.0"
sistema_monitoreo = { path = "../.././sistema_monitoreo" }
image = "0.25.1"
epi = "0.17.0"
